// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`real-project fixture suite > cra-ejected > snapshots the dependency checklist and confidence band 1`] = `
{
  "confidence": "Manual review required",
  "dependencies": [
    "required:vite",
    "required:vite-plugin-svgr",
    "required:sass",
    "optional:vite-plugin-checker",
    "required:@vitejs/plugin-react",
  ],
}
`;

exports[`real-project fixture suite > cra-ejected > snapshots the generated index.html skeleton 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <link rel="icon" href="/public/favicon.ico" />
    <title>App</title>
    <!-- Generated by @shiftkit/webpack-to-vite from HtmlWebpackPlugin (template: public/index.html).
         Merge any meta tags / template markup from that file, then delete this comment. -->
  </head>
  <body>
    <div id="root"></div>
    <script type="module" src="/src/index.tsx"></script>
  </body>
</html>
"
`;

exports[`real-project fixture suite > cra-ejected > snapshots the migration report (tier:code → message) 1`] = `
[
  "verify:framework.plugin — React signals detected — added the @vitejs/plugin-react plugin to the Vite config. Verify it is the right framework plugin and version for your app.",
  "info:config.mode — 'mode' is implicit in Vite (dev server vs 'vite build'). Dropped.",
  "info:config.unmapped — 'bail' has no Vite config equivalent and is typically unnecessary. Dropped.",
  "info:devtool.sourcemap — devtool 'source-map' was mapped to build.sourcemap: true.",
  "verify:entry.mapped — entry was mapped into Vite build input, but Vite's normal application entry is HTML-first: an index.html with <script type="module">. Verify index.html and its script tags rather than relying on build input alone.",
  "info:output.outDir — output.path was mapped to build.outDir ('build'). Vite's outDir is relative to the project root; verify the location.",
  "verify:output.naming — output.filename does not map 1:1 — Vite/Rolldown output naming differs from webpack ([name]/[contenthash] tokens differ). The value was kept as a hint comment; set build.rolldownOptions.output.entryFileNames if you rely on exact names.",
  "verify:output.naming — output.chunkFilename does not map 1:1. The value was kept as a hint comment; set output.chunkFileNames if you rely on exact chunk names.",
  "verify:output.publicPath — output.publicPath was mapped to Vite 'base' ('/'). Verify it matches your deploy sub-path (Vite 'base' affects asset URLs).",
  "info:resolve.extensions — resolve.extensions was copied to Vite resolve.extensions. Vite resolves common extensions by default; trim this if you do not rely on extensionless imports for all of them.",
  "verify:resolve.dirnameEsm — Alias replacement uses __dirname. If vite.config.ts runs as ESM, replace __dirname with fileURLToPath(new URL('.', import.meta.url)).",
  "info:resolve.alias — 2 resolve.alias entries were mapped to Vite's array-form resolve.alias.",
  "info:module.unmapped — module.strictExportPresence has no Vite equivalent and is typically unnecessary. Dropped.",
  "info:module.assetLoader — Asset module 'asset' is handled natively by Vite. Vite inlines assets below build.assetsInlineLimit (4kb default) and emits URLs otherwise, matching the 'asset' behavior. If parser.dataUrlCondition.maxSize was customized, set build.assetsInlineLimit.",
  "verify:module.svgr — @svgr/webpack was replaced with vite-plugin-svgr. Update source imports to the '?react' suffix, e.g. import Logo from './logo.svg?react'.",
  "verify:module.assetLoader — file-loader is unnecessary: Vite handles assets natively. The import shape may change — use '?url' for an asset URL and '?raw' for file contents. Verify asset imports in source.",
  "info:module.nativeLoader — babel-loader is unnecessary: Vite transpiles TS/JSX via esbuild. Note Vite does NOT type-check — run 'tsc --noEmit' (or vite-plugin-checker) separately.",
  "verify:module.cssModulesNaming — css-loader enables CSS Modules without relying on the '.module.css' suffix. Vite treats only '*.module.css' as CSS Modules by default. Rename files to '*.module.css' or configure css.modules. Any custom localIdentName belongs in css.modules.generateScopedName.",
  "info:module.nativeLoader — css-loader is handled natively by Vite's CSS pipeline. No loader is needed.",
  "info:module.nativeLoader — postcss-loader is handled natively by Vite's CSS pipeline. No loader is needed.",
  "info:module.nativeLoader — style-loader is handled natively by Vite's CSS pipeline. No loader is needed.",
  "verify:module.preprocessor — sass-loader maps to Vite's built-in sass support. Install the 'sass' compiler package; no loader config is needed. Verify any loader options (additionalData, includePaths) are moved to css.preprocessorOptions.",
  "verify:plugin.html — HtmlWebpackPlugin → Vite is HTML-first. A ready-to-paste index.html skeleton was generated from the plugin options (indexHtml in the result; --apply writes it next to the config). Move template variables/<%= %> interpolation to Vite's HTML env replacement or a plugin. Verify favicon/meta injection.",
  "info:plugin.defineEnv — DefinePlugin 'process.env.NODE_ENV' was dropped — Vite sets it (and import.meta.env.MODE) automatically based on the run mode.",
  "manual:plugin.defineEnv — 'process.env.PUBLIC_URL' was mapped to Vite 'define' as a compatibility shim. Prefer migrating it in source to import.meta.env.VITE_PUBLIC_URL (only VITE_-prefixed vars are exposed to client code) or an explicit runtime-config pattern.",
  "verify:plugin.define — DefinePlugin constants were mapped to Vite 'define'. These are static build-time text replacements — verify any values that depended on webpack runtime context.",
  "info:plugin.benign — CaseSensitivePathsPlugin is unnecessary in Vite (HMR, output cleaning, and case-sensitivity checks are built in or handled by 'vite build'). Drop it.",
  "info:plugin.miniCss — MiniCssExtractPlugin is unnecessary: 'vite build' extracts CSS automatically. Drop it (and its loader).",
  "verify:plugin.checker — ForkTsCheckerWebpackPlugin → run type/lint checks in CI, or add vite-plugin-checker for in-dev overlays (Vite does not type-check or lint during build).",
  "info:optimization.splitChunks — optimization.minimize is unnecessary: 'vite build' minifies by default (esbuild). Set build.minify only to change/disable it.",
  "verify:optimization.splitChunks — optimization.splitChunks has no direct mapping. Vite/Rolldown code-split automatically. For manual control use Rolldown codeSplitting (object-form manualChunks was removed in Vite 8). A stub was added — port only the grouping you truly rely on.",
  "info:optimization.splitChunks — optimization.runtimeChunk has no equivalent and is unnecessary: Vite/Rolldown manage the runtime/module graph automatically.",
  "info:config.unmapped — 'performance' has no Vite config equivalent and is typically unnecessary. Dropped.",
  "info:vite8.note — Output targets Vite 8: build.rollupOptions → build.rolldownOptions, build.commonjsOptions is a no-op, and object-form manualChunks was removed (use Rolldown codeSplitting).",
]
`;

exports[`real-project fixture suite > cra-ejected > snapshots the rendered vite.config.ts output 1`] = `
"// Generated by @shiftkit/webpack-to-vite
// Migration Analyzer output: review warnings before merging.
// This file was generated without executing your webpack config.

import { defineConfig } from 'vite';
import path from 'node:path';
import react from '@vitejs/plugin-react';
import svgr from 'vite-plugin-svgr';

export default defineConfig({
  plugins: [react(), svgr()],
  resolve: {
    alias: [
      { find: 'react-native', replacement: 'react-native-web' },
      { find: 'src', replacement: path.resolve(__dirname, 'src') },
    ],
    extensions: ['.web.mjs', '.mjs', '.web.js', '.js', '.web.ts', '.ts', '.web.tsx', '.tsx', '.json', '.web.jsx', '.jsx'],
  },
  define: {
    'process.env.PUBLIC_URL': JSON.stringify(''), // compatibility shim
  },
  base: '/', // from output.publicPath — verify your deploy sub-path
  build: {
    outDir: 'build',
    sourcemap: true,
    rolldownOptions: {
      input: './src/index.tsx',
      // Output naming differs from webpack ([name]/[contenthash] tokens). Verify before relying on exact names:
      // output: {
      //   entryFileNames: 'static/js/[name].[contenthash:8].js', // from output.filename
      //   chunkFileNames: 'static/js/[name].[contenthash:8].chunk.js', // from output.chunkFilename
      // },
      // splitChunks → configure Rolldown codeSplitting here if you need manual chunk grouping.
    },
  },
});

// Vite 8 note:
// - build.rollupOptions was renamed to build.rolldownOptions.
// - build.commonjsOptions is a no-op.
// - object-form manualChunks was removed; use Rolldown codeSplitting."
`;

exports[`real-project fixture suite > library-umd > snapshots the dependency checklist and confidence band 1`] = `
{
  "confidence": "Manual review required",
  "dependencies": [
    "required:vite",
  ],
}
`;

exports[`real-project fixture suite > library-umd > snapshots the migration report (tier:code → message) 1`] = `
[
  "info:config.mode — 'mode' is implicit in Vite (dev server vs 'vite build'). Dropped.",
  "verify:entry.mapped — entry was mapped into Vite build input, but Vite's normal application entry is HTML-first: an index.html with <script type="module">. Verify index.html and its script tags rather than relying on build input alone.",
  "info:output.outDir — output.path was mapped to build.outDir ('dist'). Vite's outDir is relative to the project root; verify the location.",
  "verify:output.naming — output.filename does not map 1:1 — Vite/Rolldown output naming differs from webpack ([name]/[contenthash] tokens differ). The value was kept as a hint comment; set build.rolldownOptions.output.entryFileNames if you rely on exact names.",
  "verify:output.library — output.library was mapped to a build.lib block (entry from the detected webpack entry, name 'MyWidgets', formats [umd]). Verify the entry, formats, and fileName; 'umd' and 'iife' builds need build.lib.name set.",
  "info:output.unmapped — output.globalObject has no Vite equivalent and is typically unnecessary. Dropped.",
  "info:resolve.extensions — resolve.extensions was copied to Vite resolve.extensions. Vite resolves common extensions by default; trim this if you do not rely on extensionless imports for all of them.",
  "info:module.nativeLoader — ts-loader is unnecessary: Vite transpiles TS/JSX via esbuild. Note Vite does NOT type-check — run 'tsc --noEmit' (or vite-plugin-checker) separately.",
  "manual:externals.detected — externals was detected. Vite/Rolldown external semantics differ from webpack — review build.rolldownOptions.external manually. In Vite 8, require() calls for externalized modules are preserved unless you opt into esmExternalRequirePlugin.",
  "info:devtool.sourcemap — devtool 'source-map' was mapped to build.sourcemap: true.",
  "info:vite8.note — Output targets Vite 8: build.rollupOptions → build.rolldownOptions, build.commonjsOptions is a no-op, and object-form manualChunks was removed (use Rolldown codeSplitting).",
]
`;

exports[`real-project fixture suite > library-umd > snapshots the rendered vite.config.ts output 1`] = `
"// Generated by @shiftkit/webpack-to-vite
// Migration Analyzer output: review warnings before merging.
// This file was generated without executing your webpack config.

import { defineConfig } from 'vite';

export default defineConfig({
  resolve: {
    extensions: ['.ts', '.js'],
  },
  build: {
    outDir: 'dist',
    sourcemap: true,
    lib: { // from output.library/libraryTarget — verify entry, formats, and fileName
      entry: './src/index.ts',
      name: 'MyWidgets',
      formats: ['umd'],
    },
    rolldownOptions: {
      // Output naming differs from webpack ([name]/[contenthash] tokens). Verify before relying on exact names:
      // output: {
      //   entryFileNames: 'my-widgets.js', // from output.filename
      // },
    },
  },
});

// Vite 8 note:
// - build.rollupOptions was renamed to build.rolldownOptions.
// - build.commonjsOptions is a no-op.
// - object-form manualChunks was removed; use Rolldown codeSplitting."
`;

exports[`real-project fixture suite > vue-cli-base > snapshots the dependency checklist and confidence band 1`] = `
{
  "confidence": "Manual review required",
  "dependencies": [
    "required:vite",
    "required:sass",
    "required:@vitejs/plugin-vue",
  ],
}
`;

exports[`real-project fixture suite > vue-cli-base > snapshots the generated index.html skeleton 1`] = `undefined`;

exports[`real-project fixture suite > vue-cli-base > snapshots the migration report (tier:code → message) 1`] = `
[
  "verify:framework.plugin — Vue signals detected — added the @vitejs/plugin-vue plugin to the Vite config. Verify it is the right framework plugin and version for your app.",
  "info:config.unmapped — 'context' has no Vite config equivalent and is typically unnecessary. Dropped.",
  "verify:entry.multiPage — Multiple entry points were mapped to a build input map. Vite is multi-PAGE via multiple HTML files (one per entry) rather than multiple JS entries. For a true MPA, create an HTML file per page; for a library, this input map is closer. Verify the intended shape.",
  "info:output.outDir — output.path was mapped to build.outDir ('../dist'). Vite's outDir is relative to the project root; verify the location.",
  "verify:output.naming — output.filename does not map 1:1 — Vite/Rolldown output naming differs from webpack ([name]/[contenthash] tokens differ). The value was kept as a hint comment; set build.rolldownOptions.output.entryFileNames if you rely on exact names.",
  "verify:output.publicPath — output.publicPath was mapped to Vite 'base' ('/'). Verify it matches your deploy sub-path (Vite 'base' affects asset URLs).",
  "info:resolve.extensions — resolve.extensions was copied to Vite resolve.extensions. Vite resolves common extensions by default; trim this if you do not rely on extensionless imports for all of them.",
  "verify:resolve.aliasExact — Webpack exact-match alias 'vue$' was converted to an exact Vite alias rule (/^vue$/). Verify imports like 'vue/sub/path' still resolve correctly.",
  "verify:resolve.dirnameEsm — Alias replacement uses __dirname. If vite.config.ts runs as ESM, replace __dirname with fileURLToPath(new URL('.', import.meta.url)).",
  "info:resolve.alias — 2 resolve.alias entries were mapped to Vite's array-form resolve.alias.",
  "info:module.nativeLoader — vue-loader is replaced by the @vitejs/plugin-vue plugin wired into this config. Drop the loader rule.",
  "info:module.nativeLoader — babel-loader is unnecessary: Vite transpiles TS/JSX via esbuild. Note Vite does NOT type-check — run 'tsc --noEmit' (or vite-plugin-checker) separately.",
  "verify:module.assetLoader — url-loader is unnecessary: Vite handles assets natively. The import shape may change — use '?url' for an asset URL and '?raw' for file contents. Verify asset imports in source.",
  "manual:module.customLoader — Loader 'vue-style-loader' has no known Vite equivalent. Find a matching Vite plugin or rework the transform; it cannot be mapped from config alone.",
  "info:module.nativeLoader — css-loader is handled natively by Vite's CSS pipeline. No loader is needed.",
  "verify:module.preprocessor — sass-loader maps to Vite's built-in sass support. Install the 'sass' compiler package; the loader options were moved to css.preprocessorOptions.scss — verify each one against the sass compiler options.",
  "info:plugin.benign — VueLoaderPlugin is unnecessary in Vite; @vitejs/plugin-vue compiles .vue files. Drop it.",
  "info:devServer.basic — devServer.historyApiFallback is unnecessary: Vite serves index.html for unmatched routes in dev. For SPA fallback in preview/build, configure your host.",
  "verify:devServer.basic — devServer.contentBase was mapped to Vite's publicDir ('./static'). Files there are served as-is at '/' and copied into the build output; verify the directory.",
  "verify:devServer.proxy — devServer.proxy was mapped to Vite server.proxy. Vite mirrors http-proxy options (target, changeOrigin, secure, ws). Verify each route.",
  "info:devServer.basic — Basic devServer options (port/host/open/https) were mapped to Vite 'server'.",
  "info:vite8.note — Output targets Vite 8: build.rollupOptions → build.rolldownOptions, build.commonjsOptions is a no-op, and object-form manualChunks was removed (use Rolldown codeSplitting).",
]
`;

exports[`real-project fixture suite > vue-cli-base > snapshots the rendered vite.config.ts output 1`] = `
"// Generated by @shiftkit/webpack-to-vite
// Migration Analyzer output: review warnings before merging.
// This file was generated without executing your webpack config.

import { defineConfig } from 'vite';
import path from 'node:path';
import vue from '@vitejs/plugin-vue';

export default defineConfig({
  plugins: [vue()],
  publicDir: './static', // from devServer.static/contentBase — files served as-is at '/'
  resolve: {
    alias: [
      { find: /^vue$/, replacement: 'vue/dist/vue.esm.js' },
      { find: '@', replacement: path.resolve(__dirname, '../src') },
    ],
    extensions: ['.js', '.vue', '.json'],
  },
  css: {
    preprocessorOptions: {
      scss: {
        additionalData: '@import "@/styles/variables.scss";',
      },
    },
  },
  server: {
    host: 'localhost',
    port: 8080,
    proxy: {
      '/api': { target: 'http://localhost:3000', changeOrigin: true },
    },
  },
  base: '/', // from output.publicPath — verify your deploy sub-path
  build: {
    outDir: '../dist',
    rolldownOptions: {
      input: { app: './src/main.js' },
      // Output naming differs from webpack ([name]/[contenthash] tokens). Verify before relying on exact names:
      // output: {
      //   entryFileNames: '[name].js', // from output.filename
      // },
    },
  },
});

// Vite 8 note:
// - build.rollupOptions was renamed to build.rolldownOptions.
// - build.commonjsOptions is a no-op.
// - object-form manualChunks was removed; use Rolldown codeSplitting."
`;

exports[`real-project fixture suite > webpack-merge-prod > snapshots the dependency checklist and confidence band 1`] = `
{
  "confidence": "Verify before merging",
  "dependencies": [
    "required:vite",
    "optional:rollup-plugin-visualizer",
    "optional:vite-plugin-compression2",
  ],
}
`;

exports[`real-project fixture suite > webpack-merge-prod > snapshots the migration report (tier:code → message) 1`] = `
[
  "verify:config.merge — webpack-merge detected. The analyzer reads one config object statically — if your real config is the merge of several files, resolve the merged result first (or run the analyzer per file) so nothing is missed.",
  "info:config.mode — 'mode' is implicit in Vite (dev server vs 'vite build'). Dropped.",
  "info:devtool.sourcemap — devtool 'hidden-source-map' was mapped to build.sourcemap: 'hidden'.",
  "verify:output.publicPath — output.publicPath was mapped to Vite 'base' ('/static/app/'). Verify it matches your deploy sub-path (Vite 'base' affects asset URLs).",
  "verify:plugin.compression — CompressionPlugin → only needed if you serve precompressed .gz/.br assets yourself. If so, add vite-plugin-compression2; otherwise let your CDN/host compress.",
  "info:plugin.visualizer — BundleAnalyzerPlugin → use rollup-plugin-visualizer (works with Vite/Rolldown) to inspect bundle composition.",
  "info:optimization.splitChunks — optimization.minimize is unnecessary: 'vite build' minifies by default (esbuild). Set build.minify only to change/disable it.",
  "verify:optimization.splitChunks — optimization.splitChunks has no direct mapping. Vite/Rolldown code-split automatically. For manual control use Rolldown codeSplitting (object-form manualChunks was removed in Vite 8). A stub was added — port only the grouping you truly rely on.",
  "info:vite8.note — Output targets Vite 8: build.rollupOptions → build.rolldownOptions, build.commonjsOptions is a no-op, and object-form manualChunks was removed (use Rolldown codeSplitting).",
]
`;

exports[`real-project fixture suite > webpack-merge-prod > snapshots the rendered vite.config.ts output 1`] = `
"// Generated by @shiftkit/webpack-to-vite
// Migration Analyzer output: review warnings before merging.
// This file was generated without executing your webpack config.

import { defineConfig } from 'vite';

export default defineConfig({
  base: '/static/app/', // from output.publicPath — verify your deploy sub-path
  build: {
    sourcemap: 'hidden',
    rolldownOptions: {
      // splitChunks → configure Rolldown codeSplitting here if you need manual chunk grouping.
    },
  },
});

// Vite 8 note:
// - build.rollupOptions was renamed to build.rolldownOptions.
// - build.commonjsOptions is a no-op.
// - object-form manualChunks was removed; use Rolldown codeSplitting."
`;

exports[`real-project fixture suite > webpack5-asset-modules > snapshots the dependency checklist and confidence band 1`] = `
{
  "confidence": "Manual review required",
  "dependencies": [
    "required:vite",
  ],
}
`;

exports[`real-project fixture suite > webpack5-asset-modules > snapshots the generated index.html skeleton 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Asset Modules Demo</title>
    <!-- Generated by @shiftkit/webpack-to-vite from HtmlWebpackPlugin. -->
  </head>
  <body>
    <div id="root"></div>
    <script type="module" src="/src/index.js"></script>
  </body>
</html>
"
`;

exports[`real-project fixture suite > webpack5-asset-modules > snapshots the migration report (tier:code → message) 1`] = `
[
  "info:config.mode — 'mode' is implicit in Vite (dev server vs 'vite build'). Dropped.",
  "verify:entry.mapped — entry was mapped into Vite build input, but Vite's normal application entry is HTML-first: an index.html with <script type="module">. Verify index.html and its script tags rather than relying on build input alone.",
  "info:output.outDir — output.path was mapped to build.outDir ('dist'). Vite's outDir is relative to the project root; verify the location.",
  "verify:output.naming — output.filename does not map 1:1 — Vite/Rolldown output naming differs from webpack ([name]/[contenthash] tokens differ). The value was kept as a hint comment; set build.rolldownOptions.output.entryFileNames if you rely on exact names.",
  "manual:output.unmapped — output.assetModuleFilename is not recognized by this analyzer and was dropped (e.g. assetModuleFilename maps loosely to build.assetsDir / rolldown asset naming). Review it manually.",
  "info:output.outDir — output.clean is the default in Vite ('vite build' empties outDir). Drop it.",
  "info:module.assetLoader — Asset module 'asset/resource' is handled natively by Vite. Vite emits imported assets as URLs by default; no config is needed.",
  "verify:module.assetLoader — Asset module 'asset/inline' is handled natively by Vite. Vite only auto-inlines small assets; force inlining per import with the '?inline' suffix. Verify imports that relied on always-inline behavior.",
  "verify:module.assetLoader — Asset module 'asset/source' is handled natively by Vite. Import file contents with the '?raw' suffix (e.g. import txt from './a.txt?raw'). Update those imports in source.",
  "info:module.assetLoader — Asset module 'asset' is handled natively by Vite. Vite inlines assets below build.assetsInlineLimit (4kb default) and emits URLs otherwise, matching the 'asset' behavior. If parser.dataUrlCondition.maxSize was customized, set build.assetsInlineLimit.",
  "verify:plugin.html — HtmlWebpackPlugin → Vite is HTML-first. A ready-to-paste index.html skeleton was generated from the plugin options (indexHtml in the result; --apply writes it next to the config). Move template variables/<%= %> interpolation to Vite's HTML env replacement or a plugin. Verify favicon/meta injection.",
  "info:vite8.note — Output targets Vite 8: build.rollupOptions → build.rolldownOptions, build.commonjsOptions is a no-op, and object-form manualChunks was removed (use Rolldown codeSplitting).",
]
`;

exports[`real-project fixture suite > webpack5-asset-modules > snapshots the rendered vite.config.ts output 1`] = `
"// Generated by @shiftkit/webpack-to-vite
// Migration Analyzer output: review warnings before merging.
// This file was generated without executing your webpack config.

import { defineConfig } from 'vite';

export default defineConfig({
  build: {
    outDir: 'dist',
    rolldownOptions: {
      input: './src/index.js',
      // Output naming differs from webpack ([name]/[contenthash] tokens). Verify before relying on exact names:
      // output: {
      //   entryFileNames: '[name].[contenthash].js', // from output.filename
      // },
    },
  },
});

// Vite 8 note:
// - build.rollupOptions was renamed to build.rolldownOptions.
// - build.commonjsOptions is a no-op.
// - object-form manualChunks was removed; use Rolldown codeSplitting."
`;
